# acehack-model-

./: .gitignore  README.md  imghdr.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
